s3: delete_streams: Don't jump to fail: - that resets state.

Signed-off-by: Jeremy Allison <jra@samba.org>

BUG: https://bugzilla.samba.org/show_bug.cgi?id=12299